--- a/vue-cef/package.json
+++ b/vue-cef/package.json
@@ -34,6 +34,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
+    "globals": {
+      "mp": true
+    },
     "rules": {}
   },
   "browserslist": [
